...
        categorySegmentedBarView.segmentedControl.setLocalizedTitles(["photo_grid_category_popular", "photo_grid_category_highest_rating", "photo_grid_category_upcoming", "photo_grid_category_favorite"])
        
        categorySegmentedBarView.searchBar.delegate = self
        
        layoutCollectionView()
        
        imageCollectionView.accessibilityLabel = "PhotoGridCollectionView"
        
        let cellIdentifier = "KGImageCell"
        imageDataSource = KGImageCollectionViewDataSource(cellIdentifier: cellIdentifier)
        imageCollectionView.dataSource = imageDataSource
        imageCollectionView!.register(KGImageCell.classForCoder(), forCellWithReuseIdentifier: cellIdentifier)
        
...
