...
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5cl-2j-KaM">
                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                            </imageView>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UHO-Ko-yuX">
                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                <accessibility key="accessibilityConfiguration" label="DetailImageView"/>
                            </imageView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="UHO-Ko-yuX" secondAttribute="trailing" id="2JY-bq-DSc"/>
                            <constraint firstItem="5cl-2j-KaM" firstAttribute="top" secondItem="UHO-Ko-yuX" secondAttribute="bottom" id="Our-iX-hPe"/>
...
